# guacd_win

./: CMakeLists.txt  PORTING-WINDOWS.md  config.win32.h  example_embed.c  guac_web.py  mk  test_freerdp_minimal.c  test_rdp_hyperv.py
.claude/: settings.local.json
build18/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake  guac-client-rdp.exp  guac-client-rdp.lib  guac-client-ssh.exp  guac-client-ssh.lib  guac.lib  guac_common.lib  guac_common_ssh.lib  guac_terminal.lib  guacd.exp  guacd.lib  openssl.cnf
src/common/: blank_cursor.c  clipboard.c  cursor.c  dot_cursor.c  ibar_cursor.c  iconv.c  io.c  json.c  list.c  pointer_cursor.c  rect.c  string.c  surface.c
src/common-ssh/: buffer.c  key.c  ssh.c
src/compat/: libgen.h  netdb.h  poll.h  strings.h  syslog.h  unistd.h
src/compat/arpa/: inet.h
src/compat/netinet/: in.h  tcp.h
src/compat/sys/: select.h  socket.h  time.h  wait.h
src/guacd/: conf-args.c  conf-file.c  conf-parse.c  connection.c  daemon.c  guacd-api.h  log.c  move-fd.c  proc-map.c  proc.c  proc.h  win32-compat.h  win32-getopt.c  win32-getopt.h
src/libguac/: argv.c  audio.c  client.c  display-render-thread.c  display.c  encode-jpeg.c  encode-png.c  encode-webp.c  error.c  file.c  fips.c  flag.c  hash.c  id.c  palette.c  parser.c  pool.c  protocol.c  raw_encoder.c  recording.c  rwlock.c  socket-broadcast.c  socket-fd.c  socket-nest.c  socket-ssl.c  socket-tee.c  socket-wsa.c  socket.c  string.c  tcp.c  timestamp.c  unicode.c  user-handlers.c  user-handshake.c  user.c  wait-fd.c  wol.c
src/libguac/guacamole/: error.h  fifo.h  file.h  plugin-constants.h  string.h
src/protocols/rdp/: argv.c  client.c  color.c  fs.c  gdi.c  input-queue.c  input.c  keyboard.c  print-job.c  print-job.h  rdp.c  settings.c  sftp.c  upload.c  user.c
src/protocols/rdp/channels/: cliprdr.c  disp.c  rail.c  rdpei.c  rdpgfx.c
src/protocols/rdp/channels/audio-input/: audio-buffer.c
src/protocols/rdp/plugins/guac-common-svc/: guac-common-svc.c
src/protocols/rdp/plugins/guacai/: guacai.c
src/protocols/ssh/: argv.c  client.c  clipboard.c  input.c  pipe.c  settings.c  sftp.c  ssh.c  ssh_agent.c  ttymode.c  user.c
src/terminal/: display.c  terminal-handlers.c  terminal.c  typescript.c
static/: guacamole-common.js
